--- a/src/main/resources/templates/mail/password-forget.html
+++ b/src/main/resources/templates/mail/password-forget.html
@@ -1,41 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title th:remove="all">Reset password</title>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-</head>
-<body>
+<h2 th:text="'Hello ' +  ${name} + ', '"></h2>
+You have asked to reset your password for the <span th:text="${company}"></span> account associated with this
+email address (<span th:text="${email}"></span>).
 
-<h2 th:text="'Howdy' +  ${name} + ', '"></h2>
+You new temporary password is: <b th:text="${newPassword}"></b>
 
-<p>
-    You have asked to reset your password for the <span th:text="${company}"></span> account associated with this
-    email address (<span th:text="${email}"></span>).
-</p>
+Please use the following link to reset your password:
+<a th:href="${url}">Reset Password</a>
 
-<p>
-    You new temporary password is: <b th:text="${newPassword}"></b>
-    <br>
-    Please use the following link to reset your password: <br>
-    <a th:href="${url}">Reset Password</a><br>
+You can also copy and paste the link above into a new browser window.
+If you didn't make the request, please ignore this email.
 
-    You can also copy and paste the link above into a new browser window.
-</p>
+Replies to this email are not monitored or answered. If you need support or want to reach out to our help desk,
+visit: <a href="https://www.sabhriti.com">www.sabhriti.org</a>
 
-<p>
-    If you didn't make the request, please ignore this email.
+Thanks,
+The <span th:text="${company}"></span> Team
 
-    Replies to this email are not monitored or answered. If you need support or want to reach out to our help desk,
-    visit:
-    https://www.sabhriti.org/
-
-    Thanks,
-
-    The <span th:text="${company}"></span> Team
-
-    ***This is an automatic notification. Replies to this email are not monitored or answered.
-</p>
-
-</body>
-</html>
+***This is an automatic notification. Replies to this email are not monitored or answered.
