--- a/src/main/resources/templates/mail/new-password.html
+++ b/src/main/resources/templates/mail/new-password.html
@@ -1,8 +1,14 @@
-<h2 th:text="'Howdy' +  ${name} + ', '"></h2>
-<h3>Welcome to Sabhriti!!! </h3>
-<p>
-    You have been added as a new user to the sabhriti app.
-    In order to begin with the application you will need to complete the registration process first. <br>
-    Please use the following link to continue with the registration process. <br>
-    <a class="btn btn-info continue-btn" th:href="${url}">Continue</a>
-</p>
+<H2 th:text="'Hello ' +  ${name} + ', '"></H2>
+
+<B>Welcome to Sabhriti!!! </B><BR>
+You have been added as a new user to the sabhriti app.
+In order to begin with the application you will need to complete the registration process first. <BR>
+Your new password is <B th:text="${temporary_password}"></B><BR>
+You have to use this password as old password on the field provided on the form in the next step.
+Please use the following link to continue with the registration process. <BR>
+<A class="btn btn-info continue-btn" th:href="${url}">Continue</A>.
+
+If the above link does not work, you can copy and paste the following url in your web browser.
+<B th:text="${url}"></B><BR>
+
+<B>Note: this is a system generated email, so please no not reply to this email.</B>
