feat: adds the spinner for the axios requests.

--- a/src/main/resources/templates/mail/new-password.html
+++ b/src/main/resources/templates/mail/new-password.html
@@ -6,7 +6,7 @@ In order to begin with the application you will need to complete the registratio
 Your new password is <B th:text="${temporary_password}"></B><BR>
 You have to use this password as old password on the field provided on the form in the next step.
 Please use the following link to continue with the registration process. <BR>
-<A class="btn btn-info continue-btn" th:href="${url}">Continue</A>.
+<A class="btn btn-info continue-btn" th:href="${url}">Click here</A>.
 
 If the above link does not work, you can copy and paste the following url in your web browser.
 <B th:text="${url}"></B><BR>
